--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.27.2",
 		"dotenv": "^16.0.1",
 		"jwt-decode": "^3.1.2",
+		"material-ui-chip-input": "^1.1.0",
 		"moment": "^2.29.3",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
